<resources>
    <string name="app_name">Zou</string>
    <string name="app_snail">蜗牛</string>

    <string name="app_tab_home">首页</string>
    <string name="app_tab_status">广播</string>
    <string name="app_tab_group">小组</string>
    <string name="app_tab_profile">我的</string>

    <string name="action_diary">日记</string>
    <string name="action_query">查询</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_more">更多</string>
    <string name="action_pressure">压力</string>
    <string name="action_start">启动</string>

    <string name="start">开始</string>
    <string name="stop">结束</string>

    <string name="action_douban_top250">豆瓣Top250</string>
    <string name="action_download">下载</string>
    <string name="action_download_check">检测更新</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zou</string>
    <string name="nav_header_subtitle">zsky@live.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="toGrid">Grid</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
