<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- 搜索, 应该作为动作按钮展示-->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_diary"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search2"
        android:icon="@drawable/ic_action_search"
        android:title="@string/app_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_diary"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_diary"/>

    <item
        android:id="@+id/action_query"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_query"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_about"/>
</menu>