<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_douban_top250"
        android:textSize="@dimen/title_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_douban_top250"/>
    <Button
        android:id="@+id/btn_download"
        android:textSize="@dimen/title_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_download" />
    <Button
        android:id="@+id/btn_download_check"
        android:textSize="@dimen/title_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_download_check" />

</LinearLayout>
